# sta-si

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
docs/: engines-integration.md  opensta-integration.md  primetime-comparison.md
examples/: timing_ir_export.rs
examples/icsprout55/: README.md  corner_ff.sta  corner_ss.sta  corner_tt.sta  ics55_LLSC_H7CR_inv_dff.lib  ics55_LLSC_H7CR_inv_dff_ff.lib  ics55_LLSC_H7CR_inv_dff_ss.lib  mcmm.sta  regreg.sta  regreg.v  regreg_pocv.sta
examples/seq/: seq.lib  seq.v  seq_aocv.sta  seq_pocv.sta
examples/top/: cells.lib  top.sdc  top.spef  top.sta  top.v  top_opensta.tcl  top_sdc.sta
integrations/librelane/: README.md  example_flow.py  job_builder.py  test_job_builder.py  vyges_sta_si_step.py
src/: ccs.rs  engine.rs  inc.rs  job.rs  lib.rs  liberty.rs  main.rs  netlist.rs  sdc.rs  sdclint.rs  sdf.rs  si.rs  spef.rs  sta.rs  tcl.rs
tests/: ccs_engine.rs  ceff.rs  crpr.rs  engine.rs  exceptions.rs  icsprout55.rs  json.rs  liberty.rs  lvf.rs  mcmm.rs  multiclock.rs  netlist.rs  ocv.rs  pba.rs  recv_cap.rs  robustness.rs  sdc.rs  sdf.rs  seq.rs  sink_slew.rs  skew.rs  spef.rs  sta.rs  timer.rs  transient.rs  unate.rs
