[package]
name = "vyges-sta-si"
version = "0.1.11"
edition = "2021"
description = "Static timing analysis with signal integrity: WNS/TNS sign-off with a CI gate."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/sta-si"

# No third-party deps (builds/tests offline). The shared parsers + design model
# come from the vyges-loom foundation — sibling-checkout path dep in dev; release
# pins a git/version dep. (sta-si is loom's seed: these readers originated here.)
[dependencies]
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main" }

[[bin]]
name = "vyges-sta-si"
path = "src/main.rs"

[lib]
name = "vyges_sta_si"
path = "src/lib.rs"
